tests/ui/nll/promoted-closure-pair.stderr
error[E0515]: cannot return value referencing local variable `z`
  --> $DIR/promoted-closure-pair.rs:7:5
   |
LL |     p.1(&z)
   |     ^^^^--^
   |     |   |
   |     |   `z` is borrowed here
   |     returns a value referencing data owned by the current function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0515`.
